@@ -19,11 +19,11 @@
 /*===========================================================================
  * SVN properties (DO NOT CHANGE)
  *
- * $Id:$
- * $HeadURL:$
- * $LastChangedRevision:$
- * $Author:$
- * $LastChangedDate:$
+ * $Id$
+ * $HeadURL$
+ * $LastChangedRevision$
+ * $Author$
+ * $LastChangedDate$
  *
  *==========================================================================*/
 
@@ -33,8 +33,70 @@
 #include "config.h"
 #include "difx2fits.h"
 
+/* return -1 on out-of-range */
+int getGateWindow(const DifxPulsar *dp, int bin, 
+	double *phaseOpen, double *phaseClose)
+{
+	if(!dp->scrunch)
+	{
+		/* First the simple case: no scrunching */
+		if(bin < 0 || bin >= dp->nBin)
+		{
+			return -1;
+		}
+		*phaseClose = dp->binEnd[bin];
+		bin--;
+		if(bin < 0)
+		{
+			bin = dp->nBin-1;
+		}
+		*phaseOpen = dp->binEnd[bin];
+	}
+	else if(bin == 0)
+	{
+		/* More complicated -- include all phases with weight > 0 */
+		/* Note: this will get confused for pulsars with interpulses */
+		int b;
+		int lastBin = dp->nBin-1;
+		int binOpen = -1;
+		int binClose = -1;
+		for(b = 0; b < dp->nBin; b++)
+		{
+			if(dp->binWeight[lastBin] <= 0.0 &&
+			   dp->binWeight[b] > 0.0)
+			{
+				binOpen = lastBin;
+			}
+			if(dp->binWeight[lastBin] > 0.0 &&
+			   dp->binWeight[b] <= 0.0)
+			{
+				binClose = lastBin;
+			}
+			lastBin = b;
+		}
+		if(binOpen >= 0 && binClose >= 0)
+		{
+			*phaseOpen  = dp->binEnd[binOpen];
+			*phaseClose = dp->binEnd[binClose];
+		}
+		else
+		{
+			*phaseOpen = 0.0;
+			*phaseClose = 1.0;
+		}
+	}
+	else
+	{
+		/* scrunching and bin > 1 doesn't make sense */
+		return -1;
+	}
+
+	return 0;
+}
+
 const DifxInput *DifxInput2FitsGM(const DifxInput *D,
-	struct fits_keywords *p_fits_keys, struct fitsPrivate *out)
+	struct fits_keywords *p_fits_keys, struct fitsPrivate *out,
+	struct CommandLineOptions *opts)
 {
 	char bandFormFloat[8], polyFormDouble[8];
 
@@ -59,14 +121,17 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 	int nBand, nPoly;
 	float *onPhase, *offPhase;
 	double *poly;
+	int configId, sourceId;
 	const DifxPulsar *dp;
 	const DifxPolyco *pc;
+	const DifxConfig *config;
 	int32_t gateId1;
 	int32_t sourceId1;
 	int32_t freqId1;
 	double start, stop, dm, refFreq;
 	double f;
-	int psr, p, i, c;
+	double phaseOpen, phaseClose;
+	int psr, p, i, c, v;
 
 	if(D == 0)
 	{
@@ -80,6 +145,7 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 
 	nBand = p_fits_keys->no_band;
 	nPoly = DifxPulsarArrayGetMaxPolyOrder(D->pulsar, D->nPulsar);
+
 	if(nPoly < 2)
 	{
 		nPoly = 2;
@@ -96,8 +162,14 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 	nRowBytes = FitsBinTableSize(columns, nColumn);
 
 	fitsWriteBinTable(out, nColumn, columns, nRowBytes, "GATEMODL");
+
+	/* write standard FITS header keywords and values to output file */
 	arrayWriteKeys(p_fits_keys, out);
+	
+	/* and some specific to this table */
 	fitsWriteInteger(out, "TABREV", 1, "");
+	fitsWriteInteger(out, "BIN_ID", opts->pulsarBin+1, "pulsar bin number");
+
 	fitsWriteEnd(out);
 
 	fitsbuf = (char *)calloc(nRowBytes, 1);
@@ -110,16 +182,38 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 
 	for(psr = 0; psr < D->nPulsar; psr++)
 	{
+		for(sourceId = 0; sourceId < D->nSource; sourceId++)
+		{
+			configId = D->source[sourceId].configId;
+			config = D->config + configId;
+			if(D->config->pulsarId == psr)
+			{
+				break;
+			}
+		}
+		if(sourceId >= D->nSource)
+		{
+			fprintf(stderr, "PulsarId %d not linked to any source!\n",
+				psr);
+			continue;
+		}
 		dp = D->pulsar + psr;
+
+		v = getGateWindow(dp, opts->pulsarBin, &phaseOpen, &phaseClose);
+		if(v < 0)
+		{
+			continue;
+		}
 		if(dp->nBin > 1) for(i = 0; i < nBand; i++)
 		{
-			onPhase[i]  = dp->binEnd[1];
-			offPhase[i] = dp->binEnd[0];
+			onPhase[i]  = phaseOpen;
+			offPhase[i] = phaseClose;
 		}
+		
 		for(p = 0; p < dp->nPolyco; p++)
 		{
-			sourceId1 = 0;	/* FIXME */
-			freqId1 = 0;	/* FIXME */
+			sourceId1 = sourceId+1;
+			freqId1 = config->freqId+1;
 			gateId1++;
 			pc = dp->polyco + p;
 
@@ -127,6 +221,12 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 			refFreq = pc->refFreq*1.0e6;	/* convert to Hz */
 			start = pc->mjd - pc->nBlk/2880.0;
 			stop  = pc->mjd + pc->nBlk/2880.0;
+
+			/* only write those polynomials that overlap the file */
+			if(start > D->mjdStop || stop < D->mjdStart)
+			{
+				continue;
+			}
 
 			f = 1.0;
 			for(c = 0; c < pc->nCoef; c++)
@@ -153,7 +253,7 @@ const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 			FITS_WRITE_ARRAY(onPhase, p_fitsbuf, nBand);
 			FITS_WRITE_ARRAY(offPhase, p_fitsbuf, nBand);
 			FITS_WRITE_ITEM (refFreq, p_fitsbuf);
-			FITS_WRITE_ARRAY(poly, p_fitsbuf, nBand);
+			FITS_WRITE_ARRAY(poly, p_fitsbuf, nPoly);
 
 			testFitsBufBytes(p_fitsbuf - fitsbuf, nRowBytes, "GM");
 #ifndef WORDS_BIGENDIAN
